# rovo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  DOCUMENTATION_SPEC.md  JETBRAINS.md  NEOVIM.md  README.md  VSCODE.md  ZED.md  deny.toml  justfile
.github/: release-pilot.yml
.github/workflows/: dependencies.yml  jetbrains-deploy.yml  jetbrains-plugin.yml  release.yml  vscode-extension.yml  weekly_release.yml
examples/: todo_api.rs  validation_error.rs.example
jetbrains-plugin/: build.gradle.kts  gradle.properties
lua/rovo/: init.lua
rovo-lsp/: Cargo.toml  README.md  build.rs
rovo-lsp/docs/: README.md
rovo-lsp/docs/annotations/: hidden.md  id.md  rovo-ignore.md  security.md  tag.md
rovo-lsp/src/: backend.rs  code_actions.rs  completion.rs  diagnostics.rs  docs.rs  handlers.rs  lib.rs  parser.rs  type_resolver.rs
rovo-lsp/tests/: code_actions_test.rs  comment_handling.rs  completion.rs  goto_definition.rs  handlers_test.rs  integration.rs  validation.rs
rovo-lsp/tests/fixtures/: test.rs
rovo-macros/: Cargo.toml  README.md
scripts/: sync-jetbrains-icon.sh
src/: lib.rs
tests/: any_routing.rs  basic_docs.rs  comprehensive.rs  nest_different_states.rs  parser_edge_cases.rs  path_parameter_primitives.rs  router_edge_cases.rs  router_functionality.rs  rovo_ignore.rs  rustdoc_format.rs  schema_macro.rs  spec_population.rs  validation.rs  with_example.rs
vscode-rovo/: .eslintignore  .eslintrc.json  CHANGELOG.md  README.md  package-lock.json  package.json
zed-rovo/: Cargo.toml  extension.toml  extension.wasm
zed-rovo/src/: lib.rs
(+31 files in other folders)
