[package]
name = "rovo-lsp"
version.workspace = true
edition.workspace = true
description = "Language Server Protocol implementation for Rovo annotation validation and completion"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["lsp", "language-server", "rovo", "openapi", "neovim"]
categories = ["development-tools", "text-editors"]

[[bin]]
name = "rovo-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
